# Karzar

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND_CHANGES.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  architecture.txt  commit.sh  docker-compose.dev.yml  docker-compose.image.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn_conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_product.json
.github/: CODEOWNERS  dependabot.yml
alembic/: env.py
app/: __init__.py  main.py
docs/: API_CHANGELOG.md  API_CONTRACT.md  ARCHITECTURE.md  BACKEND_CHANGES.md  BACKEND_COMPREHENSIVE_AUDIT_PLAYBOOK.md  BACKEND_STRUCTURE_REFACTOR_MAP.md  COLLABORATOR_DEPLOY.md  FRONTEND_HANDOVER.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_INTEGRATION.md  GO_LIVE_EXECUTION_PLAN.md  KNOWLEDGE_PLATFORM_PHASE1_ARCHITECTURE_AUDIT.md  KNOWLEDGE_PLATFORM_PHASE2_TARGET_ARCHITECTURE.md  KNOWLEDGE_PLATFORM_PHASE3_IMPLEMENTATION_ROADMAP.md  LOCAL_DEV_FRONTEND.md  OPERATIONS.md  SEED_IMPORT.md  TESTING.md
frontend/: .gitignore  AI_CONTEXT.md  API_REQUIREMENTS_STOREFRONT.txt  BACKEND_HANDOFF.md  BACKEND_NON_COMPLIANCE.md  FRONTEND_CHANGES.md  INTEGRATION_RUNTIME_NOTES.md  LOCAL_STACK_ACCESS.md  README.md
openapi/: v1.json
scripts/: azarsanat_crawl.py  azarsanat_import.py  azarsanat_rebrand.py  backup_db.sh  backup_uploads.sh  catalog_remediation.py  import_dasqua_images_from_official.py  import_insize_images_from_tosag.py  import_price_lists.py  restore_db.sh  (+20 more)
(+501 files in other folders)
