[project]
name = "karzar-backend"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow smoke/performance checks",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 62
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = ["alembic/versions/"]
disable_error_code = [
    "arg-type",
    "union-attr",
    "list-item",
    "index",
    "assignment",
    "prop-decorator",
    "call-arg",
    "var-annotated",
]
